{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 2841,
  "lineage": "514fb5d2-b648-8b46-d09e-ed8e08643b06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:631172387421:transit-gateway/tgw-06a0822f2c23e93d2",
            "association_default_route_table_id": "tgw-rtb-0be7208d7bd518ca9",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Main Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-06a0822f2c23e93d2",
            "multicast_support": "disable",
            "owner_id": "631172387421",
            "propagation_default_route_table_id": "tgw-rtb-0be7208d7bd518ca9",
            "tags": {
              "Name": "Main-Transit-Gateway"
            },
            "tags_all": {
              "Name": "Main-Transit-Gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "private_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0c39752ff4987b6d2",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0337fa79e639ac1c8",
              "subnet-08e487df68bb33fa7"
            ],
            "tags": {
              "Name": "Private-VPC-Attachment"
            },
            "tags_all": {
              "Name": "Private-VPC-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-06a0822f2c23e93d2",
            "vpc_id": "vpc-0b507746f90342869",
            "vpc_owner_id": "631172387421"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "public_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-08ea57b89324dedf4",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-08de35e706675d7b4",
              "subnet-0e32afdda8afab88a"
            ],
            "tags": {
              "Name": "Public-VPC-Attachment"
            },
            "tags_all": {
              "Name": "Public-VPC-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-06a0822f2c23e93d2",
            "vpc_id": "vpc-067ee0868b897af67",
            "vpc_owner_id": "631172387421"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbc8aadb91369644",
            "association_id": "eipassoc-0743ed7f011fd2a9b",
            "domain": "vpc",
            "id": "eipalloc-0dbc8aadb91369644",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00ada5e8a6ca72670",
            "private_dns": "ip-10-0-4-167.ec2.internal",
            "private_ip": "10.0.4.167",
            "public_dns": "ec2-3-209-199-169.compute-1.amazonaws.com",
            "public_ip": "3.209.199.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-EIP"
            },
            "tags_all": {
              "Name": "NAT-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca9fb66e076a6e32",
            "arn": "arn:aws:ec2:us-east-1:631172387421:instance/i-06be2dad5bf6a1b84",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-common-instance-profile",
            "id": "i-06be2dad5bf6a1b84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b782c8f4131bee9f",
            "private_dns": "ip-192-168-1-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.70",
            "public_dns": "ec2-3-89-93-128.compute-1.amazonaws.com",
            "public_ip": "3.89.93.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ac53bd15ee48c25",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01aff872a690d11a9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08de35e706675d7b4",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tags_all": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01aff872a690d11a9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_common_instance_profile",
            "aws_iam_role.ec2_common_role",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "maven",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca9fb66e076a6e32",
            "arn": "arn:aws:ec2:us-east-1:631172387421:instance/i-055a277530d10f963",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-common-instance-profile",
            "id": "i-055a277530d10f963",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08fd59d2661684127",
            "private_dns": "ip-10-0-2-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0a03a64e615ab10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0208c2ffaa25a0dfd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0337fa79e639ac1c8",
            "tags": {
              "Name": "Maven-Instance"
            },
            "tags_all": {
              "Name": "Maven-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0208c2ffaa25a0dfd"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_common_instance_profile",
            "aws_iam_role.ec2_common_role",
            "aws_instance.bastion_host",
            "aws_security_group.bastion_sg",
            "aws_security_group.maven_sg",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.private_vpc",
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca9fb66e076a6e32",
            "arn": "arn:aws:ec2:us-east-1:631172387421:instance/i-07473938895d0b59e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-common-instance-profile",
            "id": "i-07473938895d0b59e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b08b04daa1ceefb6",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0111924bdb59f1a40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cd37d109b6b87cc7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e487df68bb33fa7",
            "tags": {
              "Name": "MySQL-Instance"
            },
            "tags_all": {
              "Name": "MySQL-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd37d109b6b87cc7"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_common_instance_profile",
            "aws_iam_role.ec2_common_role",
            "aws_instance.bastion_host",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.mysql_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.tomcat_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.private_vpc",
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "private_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:internet-gateway/igw-0ff772c3ef812107b",
            "id": "igw-0ff772c3ef812107b",
            "owner_id": "631172387421",
            "tags": {
              "Name": "private-IGW"
            },
            "tags_all": {
              "Name": "private-IGW"
            },
            "vpc_id": "vpc-0b507746f90342869"
          },
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:internet-gateway/igw-089710543dee97248",
            "id": "igw-089710543dee97248",
            "owner_id": "631172387421",
            "tags": {
              "Name": "public-IGW"
            },
            "tags_all": {
              "Name": "public-IGW"
            },
            "vpc_id": "vpc-067ee0868b897af67"
          },
          "dependencies": [
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:loadbalancer/app/my-app-alb/326937addb502724",
            "arn_suffix": "app/my-app-alb/326937addb502724",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-app-alb-223997644.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:631172387421:loadbalancer/app/my-app-alb/326937addb502724",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-051ee90ac5fede09b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02fe4cb4ccdc4916a"
              },
              {
                "subnet_id": "subnet-071bc564349167be9"
              }
            ],
            "subnets": [
              "subnet-02fe4cb4ccdc4916a",
              "subnet-071bc564349167be9"
            ],
            "vpc_id": "vpc-0b507746f90342869",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_3",
            "aws_subnet.public_subnet_4",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener/app/my-app-alb/326937addb502724/75ea137f4933462b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Welcome to the app!",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener/app/my-app-alb/326937addb502724/75ea137f4933462b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:loadbalancer/app/my-app-alb/326937addb502724",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_3",
            "aws_subnet.public_subnet_4",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "nginx_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:targetgroup/nginx-target-group/a854f19c12463925",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener-rule/app/my-app-alb/326937addb502724/75ea137f4933462b/bb92e47727577880",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/nginx/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener-rule/app/my-app-alb/326937addb502724/75ea137f4933462b/bb92e47727577880",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener/app/my-app-alb/326937addb502724/75ea137f4933462b",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.nginx_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_3",
            "aws_subnet.public_subnet_4",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tomcat_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:targetgroup/tomcat-target-group/2ac7a4255dccb843",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener-rule/app/my-app-alb/326937addb502724/75ea137f4933462b/1c05014942c1f37b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/tomcat/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener-rule/app/my-app-alb/326937addb502724/75ea137f4933462b/1c05014942c1f37b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:listener/app/my-app-alb/326937addb502724/75ea137f4933462b",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.tomcat_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_3",
            "aws_subnet.public_subnet_4",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:targetgroup/nginx-target-group/a854f19c12463925",
            "arn_suffix": "targetgroup/nginx-target-group/a854f19c12463925",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:631172387421:targetgroup/nginx-target-group/a854f19c12463925",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nginx-target-group"
            },
            "tags_all": {
              "Name": "nginx-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b507746f90342869"
          },
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tomcat_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631172387421:targetgroup/tomcat-target-group/2ac7a4255dccb843",
            "arn_suffix": "targetgroup/tomcat-target-group/2ac7a4255dccb843",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:631172387421:targetgroup/tomcat-target-group/2ac7a4255dccb843",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tomcat-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tomcat-target-group"
            },
            "tags_all": {
              "Name": "tomcat-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b507746f90342869"
          },
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbc8aadb91369644",
            "association_id": "eipassoc-0743ed7f011fd2a9b",
            "connectivity_type": "public",
            "id": "nat-01d28e205af9fd043",
            "network_interface_id": "eni-00ada5e8a6ca72670",
            "private_ip": "10.0.4.167",
            "public_ip": "3.209.199.169",
            "subnet_id": "subnet-071bc564349167be9",
            "tags": {
              "Name": "NAT-Gateway"
            },
            "tags_all": {
              "Name": "NAT-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.private_igw",
            "aws_subnet.public_subnet_3",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_vpc_private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-05d16e00c961871dd",
            "id": "rtb-05d16e00c961871dd",
            "owner_id": "631172387421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d28e205af9fd043",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-06a0822f2c23e93d2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-VPC-Private-Subnet-Route-Table"
            },
            "tags_all": {
              "Name": "Private-VPC-Private-Subnet-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b507746f90342869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_eip.nat_eip",
            "aws_internet_gateway.private_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet_3",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_vpc_public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-0e9af2db222cf1d1f",
            "id": "rtb-0e9af2db222cf1d1f",
            "owner_id": "631172387421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff772c3ef812107b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-06a0822f2c23e93d2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-VPC-Public-Subnet-Route-Table"
            },
            "tags_all": {
              "Name": "Private-VPC-Public-Subnet-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b507746f90342869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_internet_gateway.private_igw",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-065e5376f65cd995e",
            "id": "rtb-065e5376f65cd995e",
            "owner_id": "631172387421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089710543dee97248",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-06a0822f2c23e93d2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-067ee0868b897af67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_internet_gateway.public_igw",
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027cac07aaf1806f4",
            "route_table_id": "rtb-05d16e00c961871dd",
            "subnet_id": "subnet-08e487df68bb33fa7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_eip.nat_eip",
            "aws_internet_gateway.private_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_vpc_private_subnet_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_3",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09164de296afb748d",
            "route_table_id": "rtb-05d16e00c961871dd",
            "subnet_id": "subnet-0337fa79e639ac1c8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_eip.nat_eip",
            "aws_internet_gateway.private_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_vpc_private_subnet_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c124f46e2b27bf89",
            "route_table_id": "rtb-065e5376f65cd995e",
            "subnet_id": "subnet-08de35e706675d7b4"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_internet_gateway.public_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bdc1f7731a33723",
            "route_table_id": "rtb-065e5376f65cd995e",
            "subnet_id": "subnet-0e32afdda8afab88a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_internet_gateway.public_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3d88f7662b7395c",
            "route_table_id": "rtb-0e9af2db222cf1d1f",
            "subnet_id": "subnet-071bc564349167be9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_internet_gateway.private_igw",
            "aws_route_table.private_vpc_public_subnet_route_table",
            "aws_subnet.public_subnet_3",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_4_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ecca126101af4ca",
            "route_table_id": "rtb-0e9af2db222cf1d1f",
            "subnet_id": "subnet-02fe4cb4ccdc4916a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main_tgw",
            "aws_internet_gateway.private_igw",
            "aws_route_table.private_vpc_public_subnet_route_table",
            "aws_subnet.public_subnet_4",
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-051ee90ac5fede09b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051ee90ac5fede09b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250120123846986100000003",
            "name_prefix": "terraform-",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b507746f90342869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-01aff872a690d11a9",
            "description": "Bastion host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all other outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow SSH to Private VPC CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-01aff872a690d11a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "46.223.149.57/32"
                ],
                "description": "Allow SSH from Home IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067ee0868b897af67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "maven_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-0208c2ffaa25a0dfd",
            "description": "Security group for Maven EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0208c2ffaa25a0dfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.70/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "maven_sg",
            "name_prefix": "",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Maven-Security-Group"
            },
            "tags_all": {
              "Name": "Maven-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b507746f90342869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_instance_profile.ec2_common_instance_profile",
            "aws_iam_role.ec2_common_role",
            "aws_instance.bastion_host",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.private_vpc",
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-0cd37d109b6b87cc7",
            "description": "MySQL Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd37d109b6b87cc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a805b348aed3d2c",
                  "sg-0b11c755750266071"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql_sg",
            "name_prefix": "",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b507746f90342869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_instance_profile.ec2_common_instance_profile",
            "aws_iam_role.ec2_common_role",
            "aws_instance.bastion_host",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.tomcat_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.private_vpc",
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-0b11c755750266071",
            "description": "Nginx Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b11c755750266071",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.1.70/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051ee90ac5fede09b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b507746f90342869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_instance_profile.ec2_common_instance_profile",
            "aws_iam_role.ec2_common_role",
            "aws_instance.bastion_host",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.private_vpc",
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-02a805b348aed3d2c",
            "description": "Tomcat Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow MySQL traffic to Database",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-02a805b348aed3d2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.70/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051ee90ac5fede09b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tomcat_sg",
            "name_prefix": "",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b507746f90342869"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_instance_profile.ec2_common_instance_profile",
            "aws_iam_role.ec2_common_role",
            "aws_instance.bastion_host",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.private_vpc",
            "aws_vpc.public_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-08e487df68bb33fa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e487df68bb33fa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0b507746f90342869"
          },
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-0337fa79e639ac1c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0337fa79e639ac1c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-0b507746f90342869"
          },
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-08de35e706675d7b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de35e706675d7b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-067ee0868b897af67"
          },
          "dependencies": [
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-0e32afdda8afab88a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e32afdda8afab88a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-067ee0868b897af67"
          },
          "dependencies": [
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-071bc564349167be9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071bc564349167be9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Public-Subnet-3"
            },
            "tags_all": {
              "Name": "Private-Public-Subnet-3"
            },
            "vpc_id": "vpc-0b507746f90342869"
          },
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-02fe4cb4ccdc4916a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fe4cb4ccdc4916a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Public-Subnet-4"
            },
            "tags_all": {
              "Name": "Private-Public-Subnet-4"
            },
            "vpc_id": "vpc-0b507746f90342869"
          },
          "dependencies": [
            "aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "private_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:vpc/vpc-0b507746f90342869",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04aaecff036e790a7",
            "default_route_table_id": "rtb-0deee4f26dec86593",
            "default_security_group_id": "sg-0056763bf31e2af6a",
            "dhcp_options_id": "dopt-032f4435ea8511674",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b507746f90342869",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0deee4f26dec86593",
            "owner_id": "631172387421",
            "tags": {
              "Name": "Private-VPC"
            },
            "tags_all": {
              "Name": "Private-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:vpc/vpc-067ee0868b897af67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-078cdff0a98eb75ad",
            "default_route_table_id": "rtb-010a48a561084a022",
            "default_security_group_id": "sg-067ddd5599194390f",
            "dhcp_options_id": "dopt-032f4435ea8511674",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067ee0868b897af67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010a48a561084a022",
            "owner_id": "631172387421",
            "tags": {
              "Name": "Public-VPC"
            },
            "tags_all": {
              "Name": "Public-VPC"
            }
          }
        }
      ]
    }
  ]
}